# pylog

./: .gitignore  CONTRIBUTING.md  GIT_OPERATIONS.md  INSTALL.md  MANIFEST.in  PYLOG_USER_MANUAL.md  README.md  README.zh-CN.md  README_WORKFLOWS.md  RELEASE_NOTE_v2.2.0.md  benchmark_results.json  build.py  example.py  performance_test.py  pylog_config.yaml  pyproject.toml  setup.py  verify_installation.py
.github/workflows/: ci.yml  pull_request_template.md  release.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
doc/: LOG4J2_ANALYSIS.md  PYLOG_API_DESIGN.md  PYLOG_ARCHITECTURE_REPORT.md  PYLOG_DEVELOPMENT_REPORT.md  PYLOG_REQUIREMENTS.md  PYLOG_TEST_REPORT.md  PYLOG_V2.1_DEVELOPMENT_GUIDE.md  PYLOG_V2.1_DEVELOPMENT_REPORT.md  PYLOG_V2_ACTION_ITEMS_REPORT.md  PYLOG_V2_DEVELOPMENT_GUIDE.md  PYLOG_V2_DEVELOPMENT_REPORT.md  PYLOG_V2_TEST_REPORT.md  log4j2 框架深度技术分析与实践指南.md
docs/: AI_PROMPTS.md  ROADMAP.md
examples/: 1_simple_usage.py  2_context_magic.py  3_web_server_demo.py  4_use_config.py  README.md  logging.yaml
log_framework/: README.md  log_config.yaml  logger_setup.py
log_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pylog/: __init__.py  manager.py
pylog.egg-info/: PKG-INFO  SOURCES.txt
pylog/core/: log_event.py  logger.py
pylog/infra/: config_loader.py
pylog_4j.egg-info/: PKG-INFO
tests/: benchmark_throughput.py  benchmark_v2.1.py  conftest.py  test_async_metrics.py  test_manager.py  test_mdc.py  test_robustness.py  test_v6_features.py  test_v7_optimization.py
